--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 }
 
-.header{
+/* .header{
     width: 100%;
     height: 100vh;
     background-image: url(images/pexels-ylanite-koppens-934070.jpg);
@@ -33,10 +33,10 @@ nav ul li a{
     color: #fff;
     display: block;
     font-weight: 700;
-}
+} */
 
 
-.logo{
+/* .logo{
     float: left;
     padding: 10px;
 }
@@ -57,7 +57,7 @@ a{
     text-decoration: none;
     color: black;
 }
-
+ */
 
 
 
@@ -185,16 +185,19 @@ a{
 
 }
 
-.btn{
+.btn-2{
     display: inline-block;
     background-color: #fce043;
     background-image: linear-gradient(315deg, #fce043 0%, #fb7ba2 74%);
     margin: 30px 0;
     padding: 8px 30px;
     border-radius: 30px;
-    
+    text-decoration: none;
+    text-decoration: #000;
 
 }
+
+
 
 
 .footer{
@@ -324,7 +327,7 @@ ul{
 
 @media only screen and (max-width:800px){
 
-    .header{
+    /* .header{
         width: 100%;
         height: 100vh;
         background-image: none;
@@ -357,7 +360,7 @@ ul{
         display: block;
         font-weight: 700;
         font-size: 10px;
-    }
+    } */
 
     .col-2,.col-3,.col-4,.col-5{
         flex-basis: 100%;
